--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -640,16 +640,16 @@ csa.24.a:0 "세상은 변할 것이다"
 
 ### Commonwealth Events ###
 
-csa.25.t.iww:0 "The 1940 Convention of the Industrial Workers of the World"
-csa.25.t.slp:0 "The 1940 Convention of the Socialist Labor Party"
+csa.25.t.iww:0 "1940년 세계산업노동자연맹 전당대회"
+csa.25.t.slp:0 "1940년 사회노동당 전당대회"
 csa.25.d.iww:0 "Today marks the 1940 convention of the Industrial Workers of the World. While there are many things to discuss at the convention, the biggest is whom shall the workers pick to represent the IWW in the 1940 Presidential election. The main nominees at the convention are, Elizabeth Gurley Flynn, James P. Cannon, and Arturo Giovannitti."
 csa.25.d.slp:0 "Today marks the 1940 convention of the Socialist Labor Party. While there are many things to discuss at the convention, the biggest is whom shall the workers pick to represent the SLP in the 1940 Presidential election. The main nominees at the convention are, Elizabeth Gurley Flynn, James P. Cannon, and Arturo Giovannitti."
 csa.25.a:0 "Elizabeth Gurley Flynn"
 csa.25.b:0 "James P. Cannon"
 csa.25.c:0 "Arturo Giovannitti"
 
-csa.26.t.cio:0 "The 1940 Convention of the American Federation of Labor"
-csa.26.t.spa:0 "The 1940 convention of the Socialist Party of America"
+csa.26.t.cio:0 "1940 전미노동연맹 전당대회"
+csa.26.t.spa:0 "1940년 미국사회주의당 전당대회"
 csa.26.d.cio:0 "Today marks the 1940 convention of the American Federation of Labor. While there are many things to discuss at the convention, the biggest is whom shall the workers pick to represent the AFL in the 1940 Presidential election. The main nominees at the convention are, Meyer London, Upton Sinclair, Frank Bohn, and Norman Thomas"
 csa.26.d.spa:0 "Today marks the 1940 convention of the Socialist Party of America. While there are many things to discuss at the convention, the biggest is whom shall the workers pick to represent the SPA in the 1940 Presidential election. The main nominees at the convention are, Meyer London, Upton Sinclair, Frank Bohn, and Norman Thomas"
 csa.26.a:0 "Meyer London"
@@ -657,15 +657,15 @@ csa.26.b:0 "Upton Sinclair"
 csa.26.c:0 "Frank Bohn"
 csa.26.e:0 "Norman Thomas"
 
-csa.27.t:0 "The 1940 Presidential Election"
+csa.27.t:0 "1940년 대통령 선거"
 csa.27.d:0 "Today marks the 1940 Presidential Election whom shall the people choose to be the new president of America?"
-csa.27.a:0 "The IWW"
-csa.27.b:0 "The SLP"
-csa.27.c:0 "The AFL"
-csa.27.e:0 "The SPA"
+csa.27.a:0 "세계산업노동자연맹"
+csa.27.b:0 "사회노동당"
+csa.27.c:0 "전미노동연맹"
+csa.27.e:0 "미국사회주의당"
 
-csa.28.t.iww:0 "The [GetYear] Convention of the Industrial Workers of the World"
-csa.28.t.slp:0 "The [GetYear] Convention of the Socialist Labor Party"
+csa.28.t.iww:0 "[GetYear]년 세계산업노동자연맹 전당대회"
+csa.28.t.slp:0 "[GetYear]년 사회노동당 전당대회"
 csa.28.d.president_iww:0 "The Industrial Workers of the world have unanimously re-nominated [CSA.GetLeader] for presidential election."
 csa.28.d.not_president_iww:0 "The 1944 convention of the Industrial Workers of the world is here and while there are many important things to be discussed at this convention. One of the more important things to discuss is whom shall be the nominee for President."
 csa.28.d.president_slp:0 "The Socialist Labor Party have unanimously re-nominated [CSA.GetLeader] for presidential election."
@@ -675,8 +675,8 @@ csa.28.b:0 "Frank T. Johns"
 csa.28.c:0 "Frank Little"
 csa.28.e:0 "Re-nominate the President"
 
-csa.29.t.cio:0 "The [GetYear] Convention of the American Federation of Labor"
-csa.29.t.spa:0 "The [GetYear] Convention of the Socialist Party of America"
+csa.29.t.cio:0 "[GetYear]년 전미노동연맹 전당대회"
+csa.29.t.spa:0 "[GetYear]년 미국사회주의당 전당대회"
 csa.29.d.president_cio:0 "The American Federation of Labor have unanimously re-nominated [CSA.GetLeader] for presidential election."
 csa.29.d.not_president_cio:0 "The 1944 convention of the American Federation of Labor is here and while there are many important things to be discussed at this convention. One of the more important things to discuss is whom shall be the nominee for President."
 csa.29.d.president_spa:0 "The Socialist Party of America have unanimously re-nominated [CSA.GetLeader] for presidential election."
@@ -693,8 +693,8 @@ csa.30.b:0 "The SLP"
 csa.30.c:0 "The AFL"
 csa.30.e:0 "The SPA"
 
-csa.31.t.iww:0 "The [GetYear] Convention of the Industrial Workers of the World"
-csa.31.t.slp:0 "The [GetYear] Convention of the Socialist Labor Party"
+csa.31.t.iww:0 "[GetYear]년 세계산업노동자연맹 전당대회"
+csa.31.t.slp:0 "[GetYear]년 사회노동당 전당대회"
 csa.31.d.president_iww:0 "The Industrial Workers of the World have unanimously re-nominated [CSA.GetLeader] for presidential election."
 csa.31.d.president_steps_down_iww:0 "The [CSA.GetLeader] is term limited and thus unable to run. As such at the [GetYear] Convention of the IWW the topic of who shall be the next nominee for President is once again one of the main topics."
 csa.31.d.not_president_iww:0 "The 1948 convention of the Industrial Workers of the World is here and while there are many important things to be discussed at this convention. One of the more important things to discuss is whom shall be the nominee for President."
@@ -706,8 +706,8 @@ csa.31.b:0 "Elmer Allison"
 csa.31.c:0 "Elizabeth Nord"
 csa.31.e:0 "Re-nominate the President"
 
-csa.32.t.cio:0 "The [GetYear] Convention of the American Federation of Labor"
-csa.32.t.spa:0 "The [GetYear] Convention of the Socialist Party of America"
+csa.32.t.cio:0 "[GetYear]년 전미노동연맹 전당대회"
+csa.32.t.spa:0 "[GetYear]년 사회노동당 전당대회"
 csa.32.d.president_cio:0 "The American Federation of Labor have unanimously re-nominated [CSA.GetLeader] for presidential election."
 csa.32.d.president_steps_down_cio:0 "The [CSA.GetLeader] is term limited and thus unable to run. As such at the [GetYear] Convention of the AFL the topic of who shall be the next nominee for President is once again one of the main topics."
 csa.32.d.not_president_cio:0 "The 1948 convention of the American Federation of Labor is here and while there are many important things to be discussed at this convention. One of the more important things to discuss is whom shall be the nominee for President."
@@ -719,15 +719,15 @@ csa.32.b:0 "John L. Lewis"
 csa.32.c:0 "L. E. Katterfeld"
 csa.32.e:0 "Re-nominate the President"
 
-csa.33.t:0 "The 1948 Presidential Election"
+csa.33.t:0 "1948년 대통령 선거"
 csa.33.d:0 "Today marks the 1948 Presidential Election whom shall the people choose to be the new president of America?"
-csa.33.a:0 "The IWW"
-csa.33.b:0 "The SLP"
-csa.33.c:0 "The AFL"
-csa.33.e:0 "The SPA"
+csa.33.a:0 "세계산업노동자연맹"
+csa.33.b:0 "사회노동당"
+csa.33.c:0 "전미노동연맹"
+csa.33.e:0 "사회노동당"
 
-csa.34.t.iww:0 "The [GetYear] Convention of the Industrial Workers of the World"
-csa.34.t.slp:0 "The [GetYear] Convention of the Socialist Labor Party"
+csa.34.t.iww:0 "[GetYear]년 세계산업노동자연맹 전당대회"
+csa.34.t.slp:0 "[GetYear]년 사회노동당 전당대회"
 csa.34.d.president_iww:0 "The Industrial Workers of the World have unanimously re-nominated [CSA.GetLeader] for presidential election."
 csa.34.d.president_steps_down_iww:0 "The [CSA.GetLeader] is term limited and thus unable to run. As such at the [GetYear] Convention of the IWW the topic of who shall be the next nominee for President is once again one of the main topics."
 csa.34.d.not_president_iww:0 "The 1952 convention of the Industrial Workers of the World is here and while there are many important things to be discussed at this convention. One of the more important things to discuss is whom shall be the nominee for President."
@@ -739,8 +739,8 @@ csa.34.b:0 "Henning A. Blomen"
 csa.34.c:0 "John Bernard"
 csa.34.e:0 "Re-nominate The President"
 
-csa.35.t.cio:0 "The [GetYear] Convention of the American Federation of Labor"
-csa.35.t.spa:0 "The [GetYear] Convention of the Socialist Party of America"
+csa.35.t.cio:0 "[GetYear]년 전미노동연맹 전당대회"
+csa.35.t.spa:0 "[GetYear]년 사회노동당 전당대회"
 csa.35.d.president_cio:0 "The American Federation of Labor have unanimously re-nominated [CSA.GetLeader] for presidential election."
 csa.35.d.president_steps_down_cio:0 "The [CSA.GetLeader] is term limited and thus unable to run. As such at the [GetYear] Convention of the AFL the topic of who shall be the next nominee for President is once again one of the main topics."
 csa.35.d.not_president_cio:0 "The 1952 convention of the American Federation of Labor is here and while there are many important things to be discussed at this convention. One of the more important things to discuss is whom shall be the nominee for President."
@@ -752,12 +752,12 @@ csa.35.b:0 "Bayard Rustin"
 csa.35.c:0 "Darlington Hoopes"
 csa.35.e:0 "Re-nominate The President"
 
-csa.36.t:0 "The 1952 Presidential Election"
+csa.36.t:0 "1952년 대통령 선거"
 csa.36.d:0 "Today marks the 1952 Presidential Election whom shall the people choose to be the new president of America?"
-csa.36.a:0 "The IWW"
-csa.36.b:0 "The SLP"
-csa.36.c:0 "The AFL"
-csa.36.e:0 "The SPA"
+csa.36.a:0 "세계산업노동자연맹"
+csa.36.b:0 "사회노동당"
+csa.36.c:0 "전미노동연맹"
+csa.36.e:0 "사회노동당"
 
 csa.37.t.syndicalist:0 "General Secretary Election"
 csa.37.t.socialist:0 "General Secretary Election"
@@ -845,7 +845,7 @@ csa.50.f:0 "Max Bedacht"
 csa.50.g:0 "James W. Ford"
 csa.50.h:0 "Gus Hall"
 
-csa.51.t:0 "The [GetYear] Presidential Election"
+csa.51.t:0 "[GetYear]년 대통령 "
 csa.51.d:0 "The Presidential election of [GetYear] is here with much fanfare. As expected [CSA.GetLeader] is in the lead and will be re-elected again as President of America."
 csa.51.a:0 "The President is elected again"
 
@@ -853,7 +853,7 @@ csa.52.t:0 "Power Struggle within the ranks"
 csa.52.d:0 "William Z. Foster and Earl Browder have long viewed each other as the enemy to the people, but just as much a stepping block to their own power. As the revolution has come to an end their struggle has taken on new heights. How this shall end, is hard to say. Though some are fearing what will happen should they take power."
 csa.52.a:0 "This could be bad"
 
-csa.53.t:0 "Foster Denounces Browder"
+csa.53.t:0 "포스터가 브라우더를 비난하다"
 csa.53.d:0 "William Z. Foster has denounced President Browder in a public speech. Decrying his methods as tyrannical and called out his position of centralized planning. Calling him a revisionist and that he is turning America into a Degenerated workers' state."
 csa.53.a:0 "That traitor will be dealt with."
 
@@ -869,27 +869,27 @@ csa.56.t:0 "The Arrest of Browder"
 csa.56.d:0 "The traitorous nature of the reactionary Browder has been discovered. Evidence has been found out how Earl Browder is working with counter-revolutionary groups abroad while at his post. Thanks to the Hall-Ballam Act, our government is not powerless to stop Browder. While Browder still reins in his clique, news is being spread throughout Congress about his vile and despicable behavior in the Daily Worker and he will soon be extradited and brought to trial."
 csa.56.a:0 "Another reactionary soon be in prison."
 
-csa.57.t:0 "The Trial of Foster"
+csa.57.t:0 "포스터의 재판"
 csa.57.d:0 "The Supreme Court has unanimously found William Z. Foster guilty of being a reactionary enemy of the people. They have declared that as such that he will be executed at dawn. We no longer have to deal with his poison damaging America any more."
 csa.57.a:0 "He dies a traitor's death"
 
-csa.58.t:0 "The Trial of Browder"
+csa.58.t:0 "브라우더의 재판"
 csa.58.d:0 "The Supreme Court has unanimously found Earl Browder guilty of being a reactionary enemy of the people. They have declared that as such that he will be executed at dawn. We no longer have to deal with his poison damaging America any more."
 csa.58.a:0 "He dies a traitor's death"
 
-csa.59.t:0 "Willam Z. Foster has gone into Exile"
+csa.59.t:0 "윌리엄 Z. 포스터가 망명길에 오르다"
 csa.59.d:0 "William Z. Foster has escaped jail in America and has fled abroad. We shall catch this reactionary traitor and make sure that his poison ends. It may take time but the reactionary traitor shall be caught."
 csa.59.a:0 "He shall be caught"
 
-csa.60.t:0 "Earl Browder has gone into Exile"
+csa.60.t:0 "얼 브라우더가 망명길에 오르다"
 csa.60.d:0 "Earl Browder has escaped jail in America and has fled abroad. We shall catch this reactionary traitor and make sure that his poison ends. It may take time but the reactionary traitor shall be caught."
 csa.60.a:0 "He shall be caught."
 
-csa.61.t:0 "William Z. Foster has been assassinated"
+csa.61.t:0 "윌리엄 Z. 포스터가 암살달하다"
 csa.61.d:0 "It has taken time however, the newly created C.I.A have killed William Z. Foster. A single shot has ended the life of one of the most dangerous enemies to America."
 csa.61.a:0 "Good Riddance"
 
-csa.62.t:0 "Earl Browder has been assassinated"
+csa.62.t:0 "얼 브라우더가 암살당하다"
 csa.62.d:0 "It has taken time, however, the newly created C.I.A have killed Earl Browder. A single shot has ended the life of one of the most dangerous enemies to America."
 csa.62.a:0 "Good Riddance"
 
@@ -1039,7 +1039,7 @@ csa.94.t:0 "1st World Science Fiction Convention"
 csa.94.d:0 "Today in New York City, the first ever world science fiction was convened, gathering literary minds in science fiction to discuss and talk about the genre of science fiction. It had such people as John W. Campbell, Isaac Asimov, Ray Bradbury, Donald A. Wollheim, Frederick Pohl, John Michel, Robert A. W. Lowndes, and Jack Gillespie. While it had a modest size of 200 participants, it was still considered a success with a second one planned next year."
 csa.94.a:0 "The World of Tomorrow"
 
-csa.95.t:0 "Indian Revolution Committee"
+csa.95.t:0 "인디언 혁명 "
 csa.95.d:0 "The native people of America have long been mistreated by the old Capitalist government. They stole their land for the greedy capitalists to turn a profit. However now that we have done away with the old capitalist government we can address the issue of the Indians. Thus, the Indian Revolution Committee has been created. The IRC will work with the local tribes and communities about how to handle the abuses that the capitalist government did and how the revolution and its ideals can be implemented within their territory."
 csa.95.a:0 "The revolution has come to the Native Americans"
 
@@ -1128,37 +1128,37 @@ csa.131.a:0 "A poor decision on their part"
 
 ### Resistance Events ###
 
-csa.200.t:0 "Longist Bombing"
+csa.200.t:0 "롱주의자들의 폭탄테러"
 csa.200.d:0 "Longist supporters of Long and his ideals have targeted a factory in [attack_state.GetName], causing a great deal of damage and the loss of many lives. Revolutionary Guards are on the scene, and claim they are closer to catching the ringleaders behind the Catholic terrorists than they were before."
-csa.200.a:0 "We shall crush these terrorists"
+csa.200.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
-csa.201.t:0 "Longist Bombing"
+csa.201.t:0 "롱주의자들의 폭탄테러"
 csa.201.d:0 "Longist supporters of Long and his ideals have targeted an arms factory in [attack_state.GetName], causing a great deal of damage and the loss of many lives. Revolutionary Guards are on the scene, and claim they are closer to catching the ringleaders behind the Catholic terrorists than they were before."
-csa.201.a:0 "We shall crush these terrorists"
+csa.201.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
-csa.202.t:0 "Longist sabotage railways"
+csa.202.t:0 "롱주의자들이 철도에 사보타주하다"
 csa.202.d:0 "The Longist have set off a series of bombs in the [attack_state.GetName] region, causing considerable damage to the railways destroying many trains and costing the lives of countless innocent people."
-csa.202.a:0 "We shall crush these terrorists"
+csa.202.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
-csa.203.t:0 "Longist Slaughter Police"
+csa.203.t:0 "롱주의자들이 경찰들을 학살하다"
 csa.203.d:0 "During the night, a police barracks in [attack_state.GetName] was attacked by the Longist Terrorists slaughtering them. The Revolutionary Guards have vowed revenge and plans to take them out and end this slaughter."
-csa.203.a:0 "We shall crush these terrorists"
+csa.203.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
-csa.204.t:0 "Federalist Bombing"
+csa.204.t:0 "연방주의자의 폭탄테러"
 csa.204.d:0 "Federalist who still fight for the old capitalist republic have targeted a factory in [attack_state.GetName], causing a great deal of damage and the loss of many lives. Revolutionary Guards are on the scene, and claim they are closer to catching the ringleaders behind the Catholic terrorists than they were before."
-csa.204.a:0 "We shall crush these terrorists"
+csa.204.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
-csa.205.t:0 "Federalist Bombing"
+csa.205.t:0 "연방주의자의 폭탄테러"
 csa.205.d:0 "Federalist who still fight for the old capitalist republic have targeted an arms factory in [attack_state.GetName], causing a great deal of damage and the loss of many lives. Revolutionary Guards are on the scene, and claim they are closer to catching the ringleaders behind the Catholic terrorists than they were before."
-csa.205.a:0 "We shall crush these terrorists"
+csa.205.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
-csa.206.t:0 "Federalist sabotage railways"
+csa.206.t:0 "연방주의자가 철도에 사보타주하다"
 csa.206.d:0 "The Federalist have set off a series of bombs in the [attack_state.GetName] region, causing considerable damage to the railways destroying many trains and costing the lives of countless innocent people."
-csa.206.a:0 "We shall crush these terrorists"
+csa.206.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
-csa.207.t:0 "Federalist Slaughter Police"
+csa.207.t:0 "연방주의자가 경찰들을 학살하다"
 csa.207.d:0 "During the night, a police barracks in [attack_state.GetName] was attacked by the Federalist Terrorists slaughtering them. The Revolutionary Guards have vowed revenge and plans to take them out and end this slaughter."
-csa.207.a:0 "We shall crush these terrorists"
+csa.207.a:0 "우리는 이 테러리스트들을 소탕할 것이다"
 
 csa.208.t:0 ""
 csa.208.d:0 ""
