--- a/Kaiserreich Korean Translation/localisation/KR_Dahomey_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dahomey_l_english.yml
@@ -96,16 +96,16 @@ dah.007.b:0 "Damnit"
 DAH_import_arms_allowed:0 "Has taken focus Import Arms"
 
 #Ideas
-DAH_gold_mining:0 "Gold Mining"
-DAH_toll:0 "Toll Roads"
+DAH_gold_mining:0 "금 채굴"
+DAH_toll:0 "유료 도로"
 #DAH_agaja:0 "Agaja's Dowry" already defined above as an idea
 DAH_leading_leader:0 "Dahomey Leader Traditions"
 DAH_amazons_idea:0 "The Ahosi"
 #DAH_salvage:0 "German Salvage" already defined above as an idea
-DAH_french_prod_id:0 "French Engineering Expertise"
-DAH_french_food:0 "French Agricultural Expertise"
-DAH_french_war:0 "French War Expertise"
-DAH_french_civil:0 "French Civil Expertise"
+DAH_french_prod_id:0 "프랑스 공학 전문가"
+DAH_french_food:0 "프랑스 농업 전문가"
+DAH_french_war:0 "프랑스 전쟁 전문가"
+DAH_french_civil:0 "프랑스 민간 전문가"
 
 #Decisions
 DAH_General:0 "Dahomey Decisions"
