--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -381,7 +381,7 @@ USA_fight_socialist_terrorists:0 "사회주의자 테러리스트와 싸우다"
 USA_fight_longist_terrorists:0 "롱 지지자 테러리스트와 싸우다"
 
 USA_progressive_policy_decisions:0 "진보당 정책"
-USA_progressive_policy_decisions_desc:0 "The Progressive Party has a number of laws and policies it seeks to push for that it passed in their platform."
+USA_progressive_policy_decisions_desc:0 "진보당은 자신들이 추진할 다수의 법안과 정책을 가지고 있습니다.."
 USA_progressive_desegregate_the_military:0 "군대내의 인종차별철폐"
 USA_progressive_desegregate_the_military_desc:0 "'Americans of all races come to America seeking a better life, and Americans of all races seek to fight and preserve American Liberty against her enemies regardless of their race. Yet for far too long that has not been the case and we have segregated the Army and diminished the Light of Liberty just a little. Yet, that ends today for the Army shall no longer be Segregated/'"
 USA_progressive_railroad_nationalization:0 "철도 국영화"
@@ -397,7 +397,7 @@ USA_progressive_public_owned_corporations:0 "공기업"
 USA_progressive_post_office_support:0 "우체국 확충"
 
 USA_republican_policies:0 "공화당 정책"
-USA_republican_policies_desc:0 "The Republican Party has a number of laws and policies it seeks to push for that it passed in their platform."
+USA_republican_policies_desc:0 "공화당은 자신들이 추진할 다수의 법안과 정책을 가지고 있습니다."
 USA_republican_desegregate_the_military:0 "군대내의 인종차별철폐"
 USA_republican_anti_lynching_law:0 "린치금지법"
 USA_republican_minimum_wage:0 "최저임금법"
@@ -411,7 +411,7 @@ USA_republican_banking_act:0 "[GetYear]년 은행법"
 USA_republican_business_support:0 "사업지원"
 
 USA_liberal_democratic_policies:0 "민주당 자유파 정책"
-USA_liberal_democratic_policies_desc:0 "The Liberal wing of the Democratic Party has a number of laws and policies it seeks to pass."
+USA_liberal_democratic_policies_desc:0 "민주당의 자유파는 자신들이 추진할 다수의 법안과 정책을 가지고 있습니다."
 USA_liberal_highway:0 "국도법"
 USA_liberal_trade_liberalization:0 "무역 자유화"
 USA_liberal_business_support:0 "사업 지원"
@@ -421,7 +421,7 @@ USA_liberal_liberal_tax:0 "자유적 과세정책"
 
 
 USA_conservative_democratic_policies:0 "민주당 보수파 정책"
-USA_conservative_democratic_policies_desc:0 "The Conservative wing of the Democratic Party has a number of laws and policies it seeks to pass."
+USA_conservative_democratic_policies_desc:0 "민주당의 보수파는 자신들이 추진할 다수의 법안과 정책을 가지고 있습니다."
 USA_conservative_social_hygine:0 "사회위생조성"
 USA_conservative_southern_investment:0 "남부 투자"
 USA_conservative_moral_education:0 "윤리교육"
@@ -1522,7 +1522,7 @@ ustates.166.d:0 "The Canadians have agreed and we have begun to create a number 
 ustates.166.a:0 "오대호에서 바다로!"
 
 ustates.167.t:0 "캐나다가 거절하다"
-ustates.167.d:0 "The Canadians have refused our proposal for some reason and the plan must be put on hold for now."
+ustates.167.d:0 "캐나다가 일부 이유를 빌미로 우리의 제안을 거부했으며 당분간 계획 추진에 발목이 잡히게 되었습니디."
 ustates.167.a:0 "빌어먹을 캐나다!"
 
 ustates.168.t:0 "연립여당의 붕괴"
@@ -1575,9 +1575,9 @@ ustates.179.t:0 "월리스의 하이브레드 옥수수"
 ustates.179.d:0 "헨리 월리스는 대학에서 조지 워싱턴 카버 교수의 지도를 받으며 농업학으로 재산을 축적했습니다. 헨리 월리스가 정치를 할 수 있게 뒷받침 해준 것은 하이브레드 작물 메이커인 파이오니어 하이-브레드 회사입니다. 월리스 대통령은 하이 브레드에서 자신의 지분을 인수하고 하이브레드 작물에 대한 정보를 농림부로 이전하라고 지시했습니다. 이 작업을 반드시 수행해야 하는 이유는 현재 진행중인 오클라호마에서 발생한 농업 재앙이 있는데, 이곳에서 발생한 황사로 수백만 달러치의 식량의 손실을 입었기 때문입니다. 월리스는 이 문제를 해결하고 미국의 식량 공급체계를 보호하기를 희망합니다."
 ustates.179.a:0 "식량이 필요해"
 
-ustates.180.t:0 "Taylor's Radical Proposal in Congress"
+ustates.180.t:0 "테일러의 의회내 급진적 제안"
 ustates.180.d:0 "Out of the several strange requests President Taylor has made over the years, this has to be the hardest to handle. President Taylor has convinced several Progressive Congressmen to revive his old legislation promoting World Unity. Explained as a successor to President Wilson's peace plans he spoke of as the Weltkrieg raged on, World Unity is the preservation of human life and culture and the end of total war. This proposal in Congress was of course defeated, but the gesture has surprisingly boosted President Taylor's reputation."
-ustates.180.a:0 "We All Hope For Peace"
+ustates.180.a:0 "우리 모두 평화를 소망한다"
 
 ustates.181.t:0 "Taylor Takes the Stage Nationwide"
 ustates.181.d:0 "One of the many eccentric qualities of President Taylor is his singing career. From his time singing to children on the steps of the Capitol building to now singing in front of his millions of constituents. President Taylor has leveraged what would have made him a laughing stock in politics into a genuine expression of his patriotism in art. Taylor sings to promote unity in America over politics, and cooperation instead of victory."
