--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -193,11 +193,11 @@ BEL_Restore_the_law_Lejeune:0 "르준 법 복구"
 BEL_Restore_the_law_Lejeune_desc:0 "1914년 독일의 정권 이양 이후, 19세기 벨기에 사람들이 얻었던 많은 자유들이 되돌려 졌습니다. 아델베르트 1세에 의해 계속되어 왔던 언론, 사법 제도, 그리고 집행부에 대한 통제는 모두 중앙 집권 독일 정권으로 모두 이양되었습니다. 이 권리를 서서히 국민에게 돌려주고 진정한 민주주의 체제를 재건함으로써 벨기에 민족주의와 망명한 왕 알버트 1세에 대한 충성을 해야 합니다."
 BEL_Rijkswacht:0 "헌병대 설립"
 BEL_Rijkswacht_desc:0 "Our Crime Figthing network is an absolute mess with the Vlaams Wacht, Feldgendarmerie and normal police forces all handle specific parts of the task leading to great unnecessary expenditure and distrust between the different branches. A new proposal by a coalition of parties in the parliament has now offered the creation of 1 centralised force, the Rijskwacht to take over all other branches except the secret service."
-BEL_BWP_Victory:0 "BWP Victory"
+BEL_BWP_Victory:0 "BWP의 승리"
 BEL_BWP_Victory_desc:0 "For the first time since the Weltkrieg started in 1914, the BWP or Belgische Werkliedenpartij has been able to secure a strong position in the parliament. Being outlawed for most of the post-Weltkrieg period and having no way to enter elections, it comes as no surprise that the Belgian people have shown their allegiance to the old Socialist mastodont."
 BEL_KP_Victory:0 "Catholic Dominance"
 BEL_KP_Victory_desc:0 "Having ruled the nation from both the shadows and the Flemish Council directly, it is not surprising that the Catholic Party has been able to retain its strong hold on the nation."
-BEL_1938_Elections:0 "Hold 1938 Elections"
+BEL_1938_Elections:0 "1938 선거 유지"
 BEL_1938_Elections_desc:0 "Since the Military regime took over in 1914, elections for the regular parliament have been time upon time suspended citing the threat of rising syndicalism and Belgian patriotism as elements infringing on the free will of every citizen. While these claims are however ludicrous, it has allowed us to reign unquestioned for over 2 decades. With tensions rising up quickly now, Adalbert I fears that these lies will no longer be enough to quell the population and that elections will have to go ahead to prevent the collapse of Flanders-Wallonia."
 
 BEL_Elections:0 "선거"
@@ -206,13 +206,13 @@ BEL_Monarchy:0 "왕정 복고"
 BEL_Monarchy_desc:0 "The monarchy has enabled Belgium to prosper throughout the 19th Century and is seen as the way forward by many Belgians (especially Flemish) due to the actions of Albert I, the Soldier King."
 BEL_Republic:0 "벨기에 공화국 설립"
 BEL_Republic_desc:0 "The monarchy has led to nearly 20 years of German oppression and a loss in the Weltkrieg. Clearly the only way forward is through republicanism."
-BEL_BWP:0 "선택된 벨기에 노동당"
+BEL_BWP:0 "벨기에 노동당 선택"
 BEL_BWP_desc:0 "The Belgian Workers Party takes control over the nation"
-BEL_LP:0 "선택된 자유당"
+BEL_LP:0 "자유당 선택"
 BEL_LP_desc:0 "The Liberal Party under Paul-Emile Janson takes control over the nation"
-BEL_KP:0 "선택된 가톨릭 블록"
+BEL_KP:0 "가톨릭 블록 선택"
 BEL_KP_desc:0 "The Catholic Party under Paul van Zeeland takes control over the nation"
-BEL_NP:0 "Choose Verdinaso"
+BEL_NP:0 "베르디나소 선택"
 BEL_NP_desc:0 "The people have chosen Joris Van Severen to lead them towards a brighter future!"
 
 BEL_Groote_Kuisch:0 "Groote Kuisch"
@@ -260,21 +260,21 @@ BEL_Strive_Towards_Confederation:0 "Strive Towards Confederation"
 BEL_Strive_Towards_Confederation_desc:0 "The Flemish and Walloons will never be able to fully work together, therefore it's best to decentralise the Government and allow self-governance for the different regions."
 BEL_Create_The_Economic_Regions:0 "Create the Economic Regions"
 BEL_Create_The_Economic_Regions_desc:0 "By creating the economic regions separating the Flemish Region, the Walloon Region and the Brussels-Capital Region we can further focus ourselves on the need of the individual instead of the collective."
-BEL_Fund_Catholic_Education:0 "Fund Catholic Education"
+BEL_Fund_Catholic_Education:0 "카톨릭 교육 투자"
 BEL_Fund_Catholic_Education_desc:0 "Catholic education is the foundation of our excellent education system and should only be further expanded reaching even more students."
 BEL_Large_State_Investements:0 "Large State Investments"
 BEL_Large_State_Investements_desc:0 "New jobs will have to be created to recover from the Economic crisis and this can only be done by large investments by the State."
 
 
-BEL_Decrease_Governement_Control:0 "Decrease Government Control"
+BEL_Decrease_Governement_Control:0 "정부 통제 감소"
 BEL_Decrease_Governement_Control_desc:0 "Belgian bureaucracy is a convoluted mess mainly created to let the Catholic party pay out its supporters. By cutting heavily in their organisations we can let the invisible hand steer us."
-BEL_Encourage_Corporations:0 "Encourage Corporations"
+BEL_Encourage_Corporations:0 "기업 장려"
 BEL_Encourage_Corporations_desc:0 "By allowing the large corporations more free reign we can persuade them to stay in Belgium and expand further."
-BEL_Excavation_Permits:0 "Excavation Permits"
+BEL_Excavation_Permits:0 "발굴 허가"
 BEL_Excavation_Permits_desc:0 "The Limburg coal mines and the Walloon steel mills are an important aspect of our economy and by giving them more self-governance we can increase our capacity."
-BEL_Focus_On_Export:0 "Focus on Exports"
+BEL_Focus_On_Export:0 "수출 중점"
 BEL_Focus_On_Export_desc:0 "Protectionism will not help our nation forward. We need to open up our borders and spread our goods to the whole globe."
-BEL_Free_Scientific_Research:0 "Free Scientific Research"
+BEL_Free_Scientific_Research:0 "자유과학연구"
 BEL_Free_Scientific_Research_desc:0 "Scientific progress cannot be hindered by Catholic funding. By opening up our purse for all that wish to innovate we can keep our competitive edge."
 
 
@@ -287,15 +287,15 @@ BEL_Improve_Relations_With_The_Netherlands_desc:0 "Relations with our northern n
 BEL_Create_Belgian-Dutch_Treaty_Organisation:0 "A Belgo-Dutch Alliance?"
 BEL_Create_Belgian-Dutch_Treaty_Organisation_desc:0 "We will offer the Dutch our proposal for a Belgo-Dutch alliance which should improve the power projection of both our countries."
 
-BEL_Reform_The_Party:0 "Reform the Party"
+BEL_Reform_The_Party:0 "당 개편"
 BEL_Reform_The_Party_desc:0 "Many of our members have lost their way, prioritising their own gains over those of the working class. A large shake-up will have to be executed eliminating these weak factions and uniting the BWP behind Jacquemotte."
-BEL_Introduce_The_8-Hour_Workday:0 "Introduce the 8-Hour Workday"
+BEL_Introduce_The_8-Hour_Workday:0 "8시간 노동 도입"
 BEL_Introduce_The_8-Hour_Workday_desc:0 "Even though the German occupier has on multiple occasions promised to introduce the 8-hour workday they never did. As such it is only logical to kick off our socialist revolution with this long promised act."
-BEL_Expand_The_Cooperatives:0 "Expand the Cooperatives"
+BEL_Expand_The_Cooperatives:0 "협력 확장"
 BEL_Expand_The_Cooperatives_desc:0 "The cooperatives are the backbone of our socialist structure. By cooperation between different unions and professions we were able to create larger structures which could better provide for the workers at a lower cost. Famous examples like the Cooperative Vooruit in Ghent were able to expand this process and become large breeding grounds for the BWP resulting in better working conditions."
-BEL_Introduce_Free_State_Education:0 "Introduce Free State Education"
+BEL_Introduce_Free_State_Education:0 "자유국가교육"
 BEL_Introduce_Free_State_Education_desc:0 "Catholic education is far spread and keeps the influence of the KP far too high. We need to invest in state sponsored education allowing church and education to be separated."
-BEL_Industrialize_Countryside:0 "Industrialise the Countryside"
+BEL_Industrialize_Countryside:0 "지방 산업화"
 BEL_Industrialize_Countryside_desc:0 "While our influence has grown steadily across the nation, the countryside is still mostly agrarian and thus is more Catholic leaning than the industrialised cities of Liege or Charleroi. Large scale industrial investments will boost our economy and will spread syndicalism to all sides of our nation."
 
 BEL_Introduce_Plan_Spaak:0 "Introduce Plan Spaak"
