--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -90,9 +90,9 @@ MAF_SovState:0 "§R이 계획은 가볍게 진행해서는 안됩니다.§!"
 MAF_EndProc:0 "§R이를 시행한다면 심각한 반란에 직면할 것입니다. 조심해야 합니다!.§!"
 MAF_Autonomy:0 "이는 중앙아프리카를 명목상의 괴뢰국으로 만들 것이며, 우리에게 더욱 큰 자치권을 줄 것입니다."
 MAF_collapse_tooltip:0 "§R중앙아프리카는 수십 개의 새로운 국가로 붕괴되고 파괴 될 것입니다.§!\n"
-MAF_collapse:0 "Mittelafrika has collapsed."
+MAF_collapse:0 "미텔아프리카가 혼란에 빠집니다."
 kenyatta_solf_affair_bad:0 "§R중앙아프리카는 법정 판결이 통과되면 크게 고통을 겪습니다...§!\n"
-maybe_dont_ignore_germany_MAF:0 "§RIgnoring the words of the Kaiser is a dangerous game...§!\n"
+maybe_dont_ignore_germany_MAF:0 "§R카이저의 말을 무시하는 것은 위험한 놀이가 될 것입니다...§!\n"
 MAF_revolt_warning:0 "§R거의 모든 대륙이 공개적인 반란에 빠지려하고 있습니다.§!\n"
 MAF_BM_Improvement_Tooltip:0 "§G회계 연도 초에 예산을 선택할 수 있습니다.§!\n"
 MAF_CAN_Vol_tooltip:0 "§GThree divisions of Canadian troops will joins us.§!"
