--- a/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Belgrade_pact_l_english.yml
@@ -64,7 +64,7 @@ pact.4.d:0 "[From.GetAdjective] 정부는 불가리아를 공략하는 진영에
 pact.4.a:0 "저들이 필요하지 않다."
 
 pact.5.t:0 "양면 전선"
-pact.5.d:0 "Without the Greeks creating another front, we may not be able to win against the Bulgarians. Because of this, it has been suggested that we ask the Ottomans to join the Pact. However, this move could also result in the Ottomans supporting Bulgaria to prevent a weak northern neighbour."
+pact.5.d:0 "그리스가 다른 전선을 만들어주지 않는다면, 우리는 불가리아와 싸울 수 없을겁니다. 때문에, 오스만에게 조약기구 가입을 제안했습니다. 이러한 움직임은 오스만으로 하여금 불가리아가 북부에 있는 우리 동맹들을 공격하기 힘들게 만들 것입니다."
 pact.5.a:0 "오스만 제국을 초청하자."
 pact.5.b:0 "우리는 그들 없이도 괜찮을 것이다."
 
@@ -110,7 +110,7 @@ pact.14.d:0 "Serbia expressed their gratitude that we did not forget old allianc
 pact.14.a:0 "우리의 독립이 보장되었군!"
 
 pact.15.t:0 "세르비아가 우리의 제안을 거부하다"
-pact.15.d:0 "In a surprising move, the Serbian government has refused our offer and will not allow us to join the Belgrade Pact."
+pact.15.d:0 "놀라운 움직임이 있었습니다, 세르비아 정부가 우리의 제안을 거부했습니다. 따라서 우리는 베오그라드 조약기구에 가입할 수 없을 것입니다."
 pact.15.a:0 "그럼 우리끼리 해야겠군."
 
 pact.16.t:0 "불가리아에 최후통첩"
@@ -134,7 +134,7 @@ pact.19.b:0 "평화의 시간이로군."
 
 pact.20.t:0 "제4차 발칸전쟁"
 pact.20.d:0 "The Bulgarian government refused an ultimatum of Serbia to hand over all territories they seized from us and our allies during the Weltkrieg. With no other option, the Serbian government has declared war. As we are part of the Belgrade Pact, we need to come to their aid. Though we will face stiff Bulgarian resistance, the Belgrade Pact surely will emerge victorious from this new conflict."
-pact.20.a:0 "Onwards to victory!"
+pact.20.a:0 "승리를 향해!"
 
 pact.21.t:0 "제4차 발칸전쟁"
 pact.21.d:0 "The Bulgarian government refused an ultimatum of Serbia to hand over all territories they seized from us and our allies during the Weltkrieg. With no other option, the Serbian government has declared war. As we are part of the Belgrade Pact, we are now obliged to enter the war with Bulgaria in order to reclaim Eastern Rumelia, if our armed forces are sufficient for the task ahead."
