버밍험->버밍엄

--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -643,7 +643,7 @@ VICTORY_POINTS_9239:0 "옥스포드"
 VICTORY_POINTS_9288:0 "고멜"
 VICTORY_POINTS_9289:0 "마힐료우"
 VICTORY_POINTS_9292:0 "첼랴빈스크"
-VICTORY_POINTS_9297:0 "버밍험"
+VICTORY_POINTS_9297:0 "버밍엄"
 VICTORY_POINTS_9303:0 "갈웨이"
 VICTORY_POINTS_9315:0 "셰필드"
 VICTORY_POINTS_9335:0 "레이와르덴"
