--- a/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
@@ -5,27 +5,27 @@ SIC_BM_3:0 "검은 월요일이 메초조르노를 강타하다"
 SIC_BM_2:0 "최악의 사태는 끝났다"
 SIC_BM_1:0 "긴축 조치"
 SIC_bacc_on_tracc:0 "번영하는 경제"
-SIC_modernized_army:0 "Messe's Reforms"
-SIC_modernized_army2:0 "The Army of Trinacria"
-SIC_total_war:0 "Sicily's Last Stand"
-SIC_pretty_much_feudalism:0 "The Land Issue"
-SIC_less_feudal_stuff:0 "육군 개혁의 첫걸음"
-SIC_land_reform_done:0 "시칠리아 육군 개혁"
-SIC_developed:0 "Ongoing Industrialisation Program"
-SIC_make_moar_danks:0 "ANFA Subsidies"
+SIC_modernized_army:0 "메세의 개혁"
+SIC_modernized_army2:0 "트라이나크리아의 군대"
+SIC_total_war:0 "시칠리아의 최후의 저항"
+SIC_pretty_much_feudalism:0 "토지 문제"
+SIC_less_feudal_stuff:0 "토지 개혁의 첫걸음"
+SIC_land_reform_done:0 "시칠리아 토지 개혁"
+SIC_developed:0 "지속적인 산업화 프로그램"
+SIC_make_moar_danks:0 "ANFA 보조금"
 SIC_sd_unions:0 "기독교 노동조합"
 SIC_sd_welfare:0 "복지국가"
-SIC_sl_liberties_assured:0 "Reassured Civil Liberties"
+SIC_sl_liberties_assured:0 "시민자유 재보장"
 SIC_sl_free_market:0 "공공 노동 계획"
 SIC_sc_breadbaskett:0 "이탈리아의 곡창지대"
 SIC_sc_preserved_values:0 "시칠리아 가치"
 SIC_kingpath:0 "All Behind the King"
-SIC_ban_italian:0 "Autonomies Protected"
+SIC_ban_italian:0 "전제 정이 보호되다"
 SIC_italian_confederation:0 "이탈리아 연방의 구성국"
 SIC_imperial_splendour:0 "제국 부활"
 SIC_planning_bonus_yuge:0 "해방 계획"
 SIC_shipyard_profits:0 "조선소 수익"
-SIC_merchant_marine_idea:0 "상선 해병대"
+SIC_merchant_marine_idea:0 "상선 수병"
 SIC_secret_polices:0 "비밀경찰"
 SIC_corportism_idea:0 "협동조합주의"
 SIC_motorization_offensive_idea:0 "차량화 공세"
